--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Acerca de</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#" id="servicios">Servicios</a></li>
+                <li><a href="#" id="about">Acerca de</a></li>
+                <li><a href="#" id="contact">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -75,13 +75,13 @@
         <ul>
             <li><strong>Correo Electrónico:</strong> <a href="mailto:soporte@ahorrashop.com">soporte@ahorrashop.com</a></li>
             <li><strong>Teléfono:</strong> <a href="tel:+11234567890">+1 (123) 456-7890</a></li>
-            <li><strong>Dirección:</strong> Calle Falsa 123, Ciudad, País</li>
+            <li><strong>Dirección:</strong> Calle Falsa 123, Lima, Perú</li>
         </ul>
         <p>También puedes seguirnos en nuestras redes sociales para estar al día con las últimas novedades y ofertas:</p>
         <div class="social-media">
-            <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/"><img src="img/facebook.png" alt="Facebook"></a>
+            <a href="https://www.twitter.com/"><img src="img/twitter.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/"><img src="img/instagram.png" alt="Instagram"></a>
         </div>
         <p>¡Esperamos tener noticias tuyas pronto!</p>
     </section>
